[package]
name = "glp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
tokio = { version = "1", features=["full"] }
reqwest = "0.11"
futures = "0.3"
colored = "2"
ptree = "0.4"
humantime = "2.1.0"
clap = { version="4", features=["string"] }
timeago = "0.4"
chrono = "0.4"
